--- a/src/app/templates/user.html
+++ b/src/app/templates/user.html
@@ -87,7 +87,7 @@
                             </div>
                         </td>
                         <td>
-                            <form action="/user/delete/{{ user['name'] }}">
+                            <form action="{{ url_for("user/delete/<name>", name=user['name']) }}">
                                 <button class="btn btn-outline-danger" type="submit">
                                     <i class="fas fa-user-slash"></i>
                                 </button>
