--- a/src/app/templates/order.html
+++ b/src/app/templates/order.html
@@ -8,15 +8,15 @@
         {% if allowed_to_order %}
             <form method=post enctype=multipart/form-data action="">
                 <div class="row border rounded">
-                    <div class="form-group col-md-2">
+                    <div class="form-group col-md-1">
                         <label for="orderAmount">Number of buns</label>
                         <input type="number" step="1" min="0" class="form-control" id="orderAmount" name="orderAmount">
                     </div>
-                    <div class="form-group col-md-2">
+                    <div class="form-group col-md-4">
                         <label for="orderClass">Type of bun</label>
                         <select class="form-control" id="orderClass" name="orderClass">
                             {% for bun_class in bun_classes %}
-                                <option>{{ bun_class }}</option>
+                                <option>{{ bun_class }} ({{ bun_classes[bun_class] }} €)</option>
                             {% endfor %}
                         </select>
                     </div>
