replaced bootstrap, fa and datepicker cdns

--- a/src/app/templates/admin.html
+++ b/src/app/templates/admin.html
@@ -4,8 +4,8 @@
 
 {% block head %}
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.8.0/css/bootstrap-datepicker.standalone.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.8.0/js/bootstrap-datepicker.js"></script>
+    <link rel="stylesheet" href="{{ url_for('static', filename='datepicker/css/bootstrap-datepicker.standalone.min.css') }}">
+    <script src="{{ url_for('static', filename='datepicker/js/bootstrap-datepicker.min.js') }}"></script>
 
 {% endblock %}
 
