--- a/src/app/templates/base.html
+++ b/src/app/templates/base.html
@@ -8,8 +8,8 @@
         <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap-4.2.1-dist/css/bootstrap.min.css') }}">
         <link rel="stylesheet" href="{{ url_for('static', filename='fontawesome-free-5.13.0-web/css/all.min.css') }}">
 
-        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
+        <script src="{{ url_for('static', filename='jquery/jquery-3.5.0.min.js') }}"></script>
+        <script src="{{ url_for('static', filename='popper/popper.min.js') }}"></script>
         <script src="{{ url_for('static', filename='bootstrap-4.2.1-dist/js/bootstrap.min.js') }}"></script>
 
         {% block head %}{% endblock %}
