add assign page and refactored related pages

--- a/src/app/templates/dashboard.html
+++ b/src/app/templates/dashboard.html
@@ -41,7 +41,7 @@
                             <tbody>
                                 {% for bun in order %}
                                     <tr>
-                                        <td scope="row">{{ bun }}</td>
+                                        <td>{{ bun }}</td>
                                         <td>{{ order[bun] }}</td>
                                     </tr>
                                 {% endfor %}
