--- a/src/app/templates/order/previous.html
+++ b/src/app/templates/order/previous.html
@@ -4,37 +4,43 @@
 
 {% block body %}
 
-    <div class="table-responsive-md">
-        <table class="table">
-            <thead>
-                <tr>
-                    <th><i class="fas fa-flag-checkered"></i></th>
-                    <th>Expiration date</th>
-                    <th>Ordered buns</th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for item in orders %}
-                    <tr>
-                        <td>
-                            {% if item['processed'] %}
-                                <i class="fas fa-flag-checkered"></i>
-                            {% else %}
-                                <i class="fas fa-circle" style="color: #28a745"></i>
-                            {% endif %}
-                        </td>
-                        <td>{{ item['expiry_date'] }}</td>
-                        <td>
-                            <ul>
-                                {% for user in item['orders'] %}
-                                    <li>{{ user }}: {{ item['orders'][user] | string_list }}</li>
-                                {% endfor %}
-                            </ul>
-                        </td>
-                    </tr>
-                {% endfor %}
-            </tbody>
-        </table>
+    <div class="row justify-content-center">
+        <div class="col-xl-6 col-lg-8 col-md-10">
+
+            <div class="table-responsive-md">
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th><i class="fas fa-flag-checkered"></i></th>
+                            <th>Expiration date</th>
+                            <th>Ordered buns</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for item in orders %}
+                            <tr>
+                                <td>
+                                    {% if item['processed'] %}
+                                        <i class="fas fa-flag-checkered"></i>
+                                    {% else %}
+                                        <i class="fas fa-circle" style="color: #28a745"></i>
+                                    {% endif %}
+                                </td>
+                                <td>{{ item['expiry_date'] }}</td>
+                                <td>
+                                    <ul>
+                                        {% for user in item['orders'] %}
+                                            <li>{{ user }}: {{ item['orders'][user] | string_list }}</li>
+                                        {% endfor %}
+                                    </ul>
+                                </td>
+                            </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+
+        </div>
     </div>
 
 {% endblock %}
