--- a/src/app/templates/admin.html
+++ b/src/app/templates/admin.html
@@ -16,10 +16,11 @@
             <div class="list-group list-group-flush">
                 <a class="list-group-item" href="{{ url_for("admin/balance") }}"><i class="fas fa-dollar-sign"></i> Change user balance</a>
                 <a class="list-group-item" href="{{ url_for("admin/formula") }}"><i class="fas fa-calculator"></i> Change mett formula</a>
-                <a class="list-group-item" href="{{ url_for("admin/purchase") }}"><i class="fas fa-list"></i> Show purchases</a>
-                <a class="list-group-item" href="{{ url_for("admin/deposit") }}"><i class="fas fa-list"></i> Show deposits</a>
-                <a class="list-group-item" href="{{ url_for("admin/assign") }}"><i class="fas fa-arrow-right"></i> Assign Buns</a>
-                <a class="list-group-item" href="{{ url_for("admin/spare") }}"><i class="fas fa-edit"></i> Assign Spare</a>
+                <a class="list-group-item" href="{{ url_for("admin/purchase") }}"><i class="fas fa-shopping-cart"></i> List all purchases</a>
+                <a class="list-group-item" href="{{ url_for("admin/deposit") }}"><i class="fas fa-cash-register"></i> List all deposits</a>
+                <a class="list-group-item" href="{{ url_for("admin/assign") }}"><i class="fas fa-cart-plus"></i> Order bun for user</a>
+                <a class="list-group-item" href="{{ url_for("admin/spare") }}"><i class="fas fa-edit"></i> Assign spare bun</a>
+                <a class="list-group-item" href="{{ url_for("admin/reroute") }}"><i class="fas fa-random"></i> Switch order between users</a>
             </div>
         </div>
         <div class="col-xl-3 col-lg-5 col-md-8 m-3">
